# SphynxEngine

./: .gitignore  .gitmodules  Building.md  CMakeLists.txt  CMakeMacros.cmake  CMakePresets.json  CMakeSettings.json  Cargo.toml  README.md  dependencies.lua  premake5.lua
Editor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.hpp  imgui.ini  main.cpp  premake5.lua
Editor/Windows/: ECSSystemManagerWindow.hpp  LoggingOutputWindow.hpp  PropertyWindow.hpp
Editor/src/: EditorApplication.cpp  EditorApplication.hpp  EditorAssetManager.hpp  EditorWindow.hpp  main.cpp
Editor/src/Importers/: MeshImporter.cpp  MeshImporter.hpp  ShaderImporter.cpp  ShaderImporter.hpp
Editor/src/Windows/: ECSSystemManagerWindow.hpp  HierarchyWindow.hpp  LoggingOutputWindow.hpp  ProfilingWindow.hpp  PropertyWindow.hpp  ViewportWindow.hpp
Engine/: CMakeLists.txt  imgui.ini  premake5.lua  std.hpp
Engine/Audio/: ALErrors.hpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioLoading.cpp  AudioSource.hpp
Engine/Core/: Application.hpp  CommandHandler.cpp  CommandHandler.hpp  CoreInclude.hpp  Engine.cpp  Engine.hpp  EngineApi.hpp  EngineSettings.hpp  EntryPoint.hpp  Time.hpp  UUID.hpp  Version.hpp
Engine/Debug/: CrashHandler.hpp  StackTrace.hpp
Engine/ECS/: Registry.hpp
Engine/Input/: Input.cpp  Input.hpp  KeyCode.hpp
Engine/Logging/: Logging.cpp  Logging.hpp
Engine/Physics/: PhysicEngine.cpp  PhysicEngine.hpp  btUtils.hpp
Engine/Platform/: Platform.hpp  WindowsPlatform.cpp
Engine/Profiling/: Profiling.hpp
Engine/ProjectSystem/: Project.hpp
Engine/Rendering/: Camera.hpp  Image.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Window.cpp  Window.hpp
Engine/Rendering/Vulkan/: VulkanBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstanceBuffer.hpp  VulkanShader.hpp  VulkanSurface.hpp  VulkanTexture.hpp  VulkanUniformBuffer.cpp
Engine/Resources/Meshes/: cube.semesh
Engine/Resources/Shaders/: CompileShaders.bat  Default.frag  Default.glsl  Default.vert  ScreenQuad.vert  triangle.glsl
Engine/Scene/: Scene.hpp
Engine/Scripting/: ScriptingEngine.cpp  ScriptingEngine.hpp  ScriptingModuleIncludes.hpp
Engine/Serialization/: FileStream.hpp  StreamReader.hpp  YAMLSerializer.hpp
Engine/UI/: Fonts.hpp  UI.hpp  VulkanImGui.cpp  VulkanImGui.hpp  VulkanImGuiHelper.hpp
Engine/src/: std.hpp
Engine/src/Audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.hpp  AudioLoading.hpp  AudioSource.cpp
Engine/src/Core/: Application.hpp  ConsoleArguments.hpp  CoreInclude.hpp  Engine.cpp  Engine.hpp  EngineApi.hpp  EngineSettings.hpp  IntTypes.hpp  Result.hpp  Time.hpp  UUID.hpp  Version.hpp
Engine/src/Debug/: CrashHandler.cpp  CrashHandler.hpp  StackTrace.hpp
Engine/src/ECS/: ComponentId.hpp  Registry.hpp  Storage.hpp
Engine/src/Input/: Input.cpp  Input.hpp  KeyCode.hpp
Engine/src/Logging/: Logging.cpp  Logging.hpp
Engine/src/Math/: Transform.hpp
Engine/src/Memory/: BufferView.hpp
Engine/src/Physics/: PhysicEngine.cpp  PhysicEngine.hpp  PhysicsComponents.hpp  btUtils.hpp
Engine/src/Platform/: Platform.hpp  StackTrace.hpp  WindowsPlatform.cpp
Engine/src/Profiling/: Profiling.hpp
EngineRuntime/: CMakeLists.txt  premake5.lua
EngineRuntime/src/: main.cpp  pch.hpp
Programs/CrashReporter/: CMakeLists.txt  CrashReport.txt  CrashReportWindow.hpp  CrashReporterGUI.hpp  imgui.ini  main.cpp  premake5.lua
Programs/ReflectionGenerator/: CMakeLists.txt  Generator.hpp  Parser.hpp  ReflectionInfo.cpp  ReflectionInfo.hpp  ScriptingDefines.hpp  TestFile.hpp  Tokenizer.hpp  main.cpp  premake5.lua
Programs/Tests/: CMakeLists.txt  ECSTest.cpp  EngineLifecycle.cpp  ResultTest.cpp  premake5.lua
Runtime/: CMakeLists.txt  main.cpp
SphynxEditor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.hpp  EditorAssetManager.hpp  EditorWindow.hpp  Guizmos.hpp  main.cpp
SphynxEditor/Importers/: ShaderImporter.cpp  ShaderImporter.hpp
SphynxEditor/Windows/: HierarchyWindow.hpp  LoggingOutputWindow.hpp  ProfilingWindow.hpp  PropertyWindow.hpp  ViewportWindow.hpp
SphynxEngine/: CMakeLists.txt  std.hpp
SphynxEngine/Audio/: ALErrors.hpp  AudioEngine.cpp  AudioLoading.hpp
SphynxEngine/Core/: Application.hpp  CommandHandler.cpp  CoreInclude.hpp  Engine.cpp  Engine.hpp  EngineSettings.hpp  EntryPoint.hpp  IntTypes.hpp  Result.hpp  Time.hpp  Version.hpp
SphynxEngine/Debug/: CrashHandler.cpp  CrashHandler.hpp
SphynxEngine/ECS/: EntityId.hpp
SphynxEngine/Logging/: Logging.cpp  Logging.hpp
SphynxEngine/Math/: Transform.hpp
SphynxEngine/Physics/: PhysicEngine.cpp  PhysicEngine.hpp  PhysicsComponents.hpp  btUtils.hpp
SphynxEngine/Platform/: LinuxPlatform.cpp  Platform.hpp  WindowsPlatform.cpp
SphynxEngine/Profiling/: Profiling.hpp
SphynxEngine/ProjectSystem/: Project.hpp
SphynxEngine/Rendering/: Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  InstanceData.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  RenderingComponents.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
SphynxEngine/Scene/: AllComponents.hpp  Scene.cpp  Scene.hpp  SceneSerializer.hpp
SphynxEngine/Scripting/: ScriptingEngine.cpp  ScriptingEngine.hpp  ScriptingInclude.hpp
SphynxEngine/Serialization/: FileStream.hpp  MemoryStream.hpp  StreamReader.hpp  StreamWriter.hpp  YAMLSerializer.hpp
SphynxEngine/UI/: Fonts.hpp  ImGuiBuild.cpp  UI.cpp  UI.hpp  UIThemes.hpp  VulkanImGui.cpp  VulkanImGui.hpp
SphynxRuntime/: CMakeLists.txt  main.cpp
TestProject/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  TestProject.seproj
TestProject/Binaries/: TestProject.exp  TestProject.lib
TestProject/Config/: EngineConfig.ini  RenderDocSettings.cap  RenderDocSettings_Runtime.cap
TestProject/Source/: ReflectionGenerator.bat  premake5.lua  tmp.cpp
crates/rendering/: Cargo.toml
src/: main.rs
(+155 files in other folders)
