[package]
name = "sphynx_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/core",
	"crates/logging",
	"crates/input",
	"crates/rendering",
	"crates/derive_vertex_attrib",
]

[dependencies]
sphynx_core = { path = "crates/core" }
anyhow = { workspace = true }
tokio = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.81"
winit = "0.29.15"
wgpu = "0.19.3"
tokio = { version = "1.39", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
cgmath = "0.18"
bytemuck = { version = "1.15", features = ["derive"] }
wavefront = { version = "0.2.3"}